--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
+    "start": "webpack-dev-server --inline --hot",
     "build": "webpack"
   },
   "author": "",
@@ -20,5 +20,8 @@
     "css-loader": "^0.23.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.11"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^1.16.2"
   }
 }
