--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.11"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.16.0",
     "webpack-dev-server": "^1.16.2"
   }
 }
